--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "edu-organizer-backend",
   "version": "1.0.0",
   "description": "Aplicacion para tomar asistencias",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "migrate": "sequelize db:migrate",
+    "install:migrate": "npm install && npm run migrate",
+    "add-migration": "sequelize migration:generate --name",
+    "migrate-undo": "sequelize db:migrate:undo",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/agusbarrio/edu-organizer-backend/issues"
   },
-  "homepage": "https://github.com/agusbarrio/edu-organizer-backend#readme"
+  "homepage": "https://github.com/agusbarrio/edu-organizer-backend#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "lodash": "^4.17.21",
+    "mysql2": "^3.2.1",
+    "sequelize": "^6.31.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.0"
+  }
 }
