--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "start": "node index.js",
     "migrate": "sequelize db:migrate",
     "install:migrate": "npm install && npm run migrate",
-    "add-migration": "sequelize migration:generate --name",
-    "migrate-undo": "sequelize db:migrate:undo",
     "dev": "nodemon index.js"
   },
   "repository": {
@@ -24,11 +22,15 @@
   "homepage": "https://github.com/agusbarrio/edu-organizer-backend#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.1.5",
     "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "mysql2": "^3.2.1",
     "sequelize": "^6.31.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "sequelize-cli": "^6.6.0"
   }
 }
