--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.1",
-    "sequelize": "^6.31.0"
+    "sequelize": "^6.31.0",
+    "yup": "^1.1.1",
+    "yup-password": "^0.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
