--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
   },
   "homepage": "https://github.com/agusbarrio/edu-organizer-backend#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "glob": "^10.2.1",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "mustache": "^4.2.0",
     "mysql2": "^3.2.1",
     "nanoid": "^3.3.6",
     "sequelize": "^6.31.0",
