--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mustache": "^4.2.0",
     "mysql2": "^3.2.1",
