--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
+  "buildCommand": "npm run vercel-build && npm run migrate",
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node",
-      "buildCommand": "npm run vercel-build && npm run migrate"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
