--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "functions": {
-    "index.js": {
-      "memory": 1024
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
     }
-  }
+  ]
 }
