--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "edu-organizer-backend",
   "version": "1.0.0",
+  "engines": {
+    "node": ">18.x"
+  },
   "description": "Aplicacion para tomar asistencias",
   "main": "index.js",
   "scripts": {
