--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,14 @@
 {
-  "functions": {
-    "./": {
-      "memory": 1024
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
 }
