--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "edu-organizer-backend",
   "version": "1.0.0",
   "engines": {
-    "node": ">18.x"
+    "node": "18.x"
   },
   "description": "Aplicacion para tomar asistencias",
   "main": "index.js",
