--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "npm run install:migrate",
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "npm run vercel-build && npm run migrate",
   "devCommand": "npm run dev",
   "builds": [
     {
