--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
     "mustache": "^4.2.0",
     "mysql2": "^3.2.1",
