--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ deploy:
     - npm start
 
 rules:
-  - if: $CI_COMMIT_BRANCH == "main"
+  - if: '$CI_COMMIT_BRANCH == "main"'
     exists:
       - .gitlab-ci.yml
   - when: never
