--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mustache": "^4.2.0",
     "mysql2": "^3.6.1",
     "nanoid": "^3.3.6",
