--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mysql2": "^3.9.2",
     "nanoid": "^3.3.7",
     "sequelize": "^6.37.1",
+    "xlsx-js-style": "^1.2.0",
     "yup": "^1.4.0",
     "yup-password": "^0.3.0"
   }
