--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mustache": "^4.2.0",
     "mysql2": "^3.9.2",
     "nanoid": "^3.3.7",
+    "resend": "^6.2.0",
     "sequelize": "^6.37.1",
     "xlsx-js-style": "^1.2.0",
     "yup": "^1.4.0",
